# xilinx_mec_poc

./: .gitignore  API_SPEC.md  CMakeLists.txt  Makefile  Makefile.bak  README.md
U96_data/usr/include/xilinx/ai/: demo.hpp
mec_test_client/: CMakeLists.txt  Client.cpp  config.h
src/: asyncudptest.cpp
src/example_http/: asyncudp.hpp  request.hpp  request_handler.cpp  request_parser.cpp  request_parser.hpp
src/mec_http_server/: asyncudp.hpp  connection.cpp  image_classifier.hpp  image_classifier_caff.cpp  image_classifier_dpu.cpp  process_result_for_boost_server.hpp  reply.hpp  request_handler.cpp  request_parser.cpp  request_parser.hpp
